--- a/style.css
+++ b/style.css
@@ -3,12 +3,161 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 img {
     width: 200px;
 }
+
 a {
     text-decoration: none;
 }
+
 ul li {
     list-style: none;
+}
+
+/* SECTION  HEADER  */
+
+.header__container {
+    padding: 1.8rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #9BA5FF;
+}
+
+.header__title {
+    font-size: 16px;
+    font-weight: 400;
+    color: #363636;
+    font-family: 'Poppins', sans-serif;
+}
+
+.header__btn a {
+    margin: 0 10px;
+    padding: 3px 1rem;
+    background-color: #fff;
+    font-family: 'Poppins', sans-serif;
+    color: #363636;
+    border-radius: 4px;
+    border: none;
+}
+
+.header__btn:hover a {
+    box-shadow: 1px 2px 2px 0 grey;
+}
+
+.hero--nav--logo {
+    padding: 2rem 7rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.menu__bar {
+    display: flex;
+    align-items: center;
+}
+.menu__bar ul {
+    display: inline-flex;
+}
+.menu__bar ul li {
+    padding: 0 1.5rem;
+}
+.menu__bar ul li a {
+    font-size: 16px;
+    font-weight: 400;
+    color: #363636;
+    font-family: 'Maven Pro', sans-serif;
+}
+.sub__menu {
+    display: none;
+}
+.menu__bar ul li:hover .sub__menu{
+    display: block;
+    position: absolute;
+}
+.menu__bar ul li:hover .sub__menu ul {
+    display: block;
+}
+.sub__menu ul li {
+    padding: 10px 0;
+    margin-left: 1rem;
+}
+.nav__icon {
+    display: flex;
+    align-items: center;
+    font-size: 17px;
+    font-weight: 600;
+    color: black;
+    font-family: 'Maven Pro', sans-serif;
+}
+.nav__icon i {
+    margin-left: 10px;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+/* SECTION LANDING */
+.landing__container {
+    padding: 2rem 0;
+    width: 100%;
+    height: 310px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.landing__container::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    /* background-color: #000; */
+    background: url(./image/code-gif-homepage.gif);
+    background-position: center;
+    background-size: cover;
+    z-index: -1;
+    opacity: 0.9;
+}
+.landing__titl {
+    font-size: 48px;
+    font-weight: 400;
+    font-family: 'Maven Pro', sans-serif;
+    color: #FFF;
+}
+.landing__picture {
+    padding: 1rem 0;
+    display: flex;
+    align-items: center;
+}
+.img__title {
+    font-size: 48px;
+    font-weight: 400;
+    font-family: 'Maven Pro', sans-serif;
+    color: #FFF;
+}
+.landing__img {
+    margin: 0 10px;
+    width: 40px;
+    height: 40px;
+}
+.landing__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.landing__btn {
+    margin-top: 2rem;
+}
+.landing__btn a {
+    padding: 10px 1rem;
+    background: #4966FD;
+    border-radius: 5px;
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: 'Maven Pro', sans-serif;
 }
