--- a/style.css
+++ b/style.css
@@ -53,36 +53,47 @@ ul li {
     align-items: center;
     justify-content: space-between;
 }
+
 .menu__bar {
     display: flex;
     align-items: center;
 }
+
 .menu__bar ul {
     display: inline-flex;
 }
+
 .menu__bar ul li {
     padding: 0 1.5rem;
 }
+
 .menu__bar ul li a {
     font-size: 16px;
     font-weight: 400;
     color: #363636;
     font-family: 'Maven Pro', sans-serif;
 }
+
 .sub__menu {
     display: none;
+    background-color: #FFF;
+    border: 2px solid red;
 }
-.menu__bar ul li:hover .sub__menu{
+
+.menu__bar ul li:hover .sub__menu {
     display: block;
     position: absolute;
 }
+
 .menu__bar ul li:hover .sub__menu ul {
     display: block;
 }
+
 .sub__menu ul li {
     padding: 10px 0;
     margin-left: 1rem;
 }
+
 .nav__icon {
     display: flex;
     align-items: center;
@@ -91,6 +102,7 @@ ul li {
     color: black;
     font-family: 'Maven Pro', sans-serif;
 }
+
 .nav__icon i {
     margin-left: 10px;
     font-size: 25px;
@@ -108,6 +120,7 @@ ul li {
     justify-content: center;
     position: relative;
 }
+
 .landing__container::before {
     content: '';
     position: absolute;
@@ -116,42 +129,49 @@ ul li {
     top: 0;
     left: 0;
     /* background-color: #000; */
-    background: url(./image/code-gif-homepage.gif);
+    background: rgba(0, 0, 0, 0.9) url(./image/code-gif-homepage.gif);
     background-position: center;
     background-size: cover;
     z-index: -1;
     opacity: 0.9;
 }
+
 .landing__titl {
     font-size: 48px;
     font-weight: 400;
     font-family: 'Maven Pro', sans-serif;
     color: #FFF;
 }
+
 .landing__picture {
     padding: 1rem 0;
     display: flex;
     align-items: center;
 }
+
 .img__title {
     font-size: 48px;
     font-weight: 400;
     font-family: 'Maven Pro', sans-serif;
     color: #FFF;
 }
+
 .landing__img {
     margin: 0 10px;
     width: 40px;
     height: 40px;
 }
+
 .landing__img img {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
+
 .landing__btn {
     margin-top: 2rem;
 }
+
 .landing__btn a {
     padding: 10px 1rem;
     background: #4966FD;
@@ -160,4 +180,318 @@ ul li {
     font-size: 14px;
     font-weight: 500;
     font-family: 'Maven Pro', sans-serif;
+    transition: 0.3s;
+}
+
+.landing__btn:hover a {
+    background-color: #fff;
+    color: #000;
+}
+
+/* SECTION  PRODUCT */
+.product__container {
+    background-color: #EDEDED;
+}
+
+.product__content {
+    padding: 5rem 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.product {
+    margin: 2rem 9px;
+    position: relative;
+}
+
+.product__img {
+    width: 288px;
+    height: 288px;
+}
+
+.product__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.view__btn {
+    margin: 1rem 0;
+}
+
+.view__btn a {
+    padding: 1rem 6.2rem;
+    background-color: #4966FD;
+    color: #FFF;
+    font-size: 17px;
+    font-weight: 700;
+    font-family: 'Maven Pro', sans-serif;
+    border-radius: 5px;
+}
+
+.sale__btn {
+    padding: 11px 3px;
+    display: inline-flex;
+    border-radius: 50%;
+    background-color: #5A75FF;
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: 'Maven Pro', sans-serif;
+    position: absolute;
+    top: -12px;
+    left: 260px;
+}
+
+.product__name {
+    padding: 10px 0;
+    font-size: 17px;
+    font-weight: 500;
+    color: #363636;
+    font-family: 'Rubik', sans-serif;
+}
+
+.product__price {
+    font-size: 15px;
+    font-weight: 700;
+    color: #525252;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+/* SECTION CHECK OUT  */
+
+.check--out--content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #EDEDED;
+}
+
+.check--out--header {
+    font-size: 23px;
+    font-weight: 600;
+    color: #525252;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.check--out--btn {
+    margin: 3rem 0;
+    padding: 10px 1.5rem;
+    background-color: #5A75FF;
+    color: #FFF;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    font-family: 'Maven Pro', sans-serif;
+    transition: 0.3s;
+}
+
+.check--out--btn:hover {
+    background-color: #363636;
+}
+
+.check--out--footer {
+    margin-top: 2rem;
+    font-size: 38px;
+    font-weight: 500;
+    color: #363636;
+    font-family: 'Rubik', sans-serif;
+}
+
+.check--out--dash {
+    margin: 2rem 0;
+    background-color: #5C9735;
+    width: 50px;
+    height: 1px;
+}
+
+/* SECTION FACEBOOK BOX  */
+.facebook--box--container {
+    background-color: #EDEDED;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.facebook__box {
+    padding: 1rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.facebook--box--review {
+    margin: 1rem 1.5rem;
+    width: 365px;
+    height: 170px;
+}
+
+.facebook--box--review img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.facebook--box--footer {
+    margin-bottom: 6rem;
+    font-size: 17px;
+    font-weight: 400;
+    color: #26222f;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+/* SECTION DEV COMMUNITY  */
+.dev--community--container {
+    padding: 7rem 0;
+    background-color: #6F7687;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.9;
+}
+
+.dev--community--header {
+    /* margin-top: 7rem; */
+    font-size: 42px;
+    font-weight: 500;
+    color: #FFF;
+    font-family: 'Rubik', sans-serif;
+}
+
+.dev--community--title {
+    margin-top: 2rem;
+    font-size: 17px;
+    font-weight: 400;
+    color: #FFF;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.dev--community--title2 {
+    margin: 1rem 0;
+    font-size: 17px;
+    font-weight: 400;
+    color: #FFF;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.dev--community--gallery {
+    margin-top: 3rem;
+    display: flex;
+}
+
+.dev--community--image {
+    margin: 0 3rem;
+    width: 250px;
+    height: 250px;
+    border: 3px solid #525252;
+    border-radius: 17px;
+}
+
+.dev--community--image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.dev--community--dot {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dev__dot {
+    margin: 0 5px;
+    background-color: #000;
+    width: 8px;
+    height: 8px;
+    border-radius: 50px;
+}
+.dev__dot2 {
+    background-color: #525252;
+    width: 8px;
+    height: 8px;
+    border-radius: 50px;
+}
+
+/* SECTION ELEMENTOR */
+.elementor__container {
+    padding: 3rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F4F6F3;
+}
+.elementor__box {
+    margin: 0 4rem;
+    display: flex;
+}
+.elementor__icon {
+    margin-top: 1rem;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background-color: #4966FD;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 700;
+}
+.elementor__text {
+    padding: 1rem;
+}
+.elementor__head {
+    font-size: 17px;
+    font-weight: 500;
+    color: #363636;
+    font-family: 'Rubik', sans-serif;
+}
+.elementor__title2 {
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #525252;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+/* SECTION  ELEMENTOR2  */
+.elementor2__container {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #F1F2F0;
+}
+.elementor2__icon {
+    font-size: 80px;
+    font-weight: 900;
+    color: #4966FD;
+}
+.elementor2__text {
+    margin: 1rem 0;
+    font-size: 17px;
+    font-weight: 700;
+    color: #020101;
+    font-family: 'Maven Pro', sans-serif;
+}
+.elementor2__form {
+    font-size: 17px;
+    font-weight: 400;
+    color: #020101;
+    font-family: 'Maven Pro', sans-serif;
+}
+.elementor2__form a{
+    margin: 0 5px;
+ text-decoration: underline;
+ font-size: 17px;
+ font-weight: 400;
+ font-family: 'Maven Pro', sans-serif;
 }
