--- a/style.css
+++ b/style.css
@@ -77,24 +77,29 @@ ul li {
 .sub__menu {
     display: none;
     background-color: #FFF;
-    border: 2px solid red;
 }
 
 .menu__bar ul li:hover .sub__menu {
+    margin-top: 2rem;
+    padding:  0 1rem;
+    width: 230px;
     display: block;
     position: absolute;
+    text-align: start;
+    z-index: 1;
 }
 
 .menu__bar ul li:hover .sub__menu ul {
     display: block;
 }
-
-.sub__menu ul li {
-    padding: 10px 0;
-    margin-left: 1rem;
+.menu__bar ul li:hover .sub__menu ul li .sub__log{
 }
 
+.sub__menu ul li {
+    padding: 1.3rem 0;
+}
 .nav__icon {
+    padding-left: 2rem;
     display: flex;
     align-items: center;
     font-size: 17px;
@@ -119,6 +124,7 @@ ul li {
     align-items: center;
     justify-content: center;
     position: relative;
+    background: rgba(0, 0, 0, 0.7);
 }
 
 .landing__container::before {
@@ -191,6 +197,55 @@ ul li {
 /* SECTION  PRODUCT */
 .product__container {
     background-color: #EDEDED;
+}
+
+.fixed__btn {
+    padding: 0 3rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+}
+
+.btn--col--one {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 520px;
+    left: 50px;
+    z-index: 1;
+}
+
+.msnger__btn {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4966FD;
+    color: #FFF;
+    border-radius: 50px;
+    font-size: 40px;
+}
+
+.contact__btn {
+    margin-left: 5px;
+    padding: 5px 1rem;
+    background-color: #FFF;
+    font-size: 17px;
+    font-weight: 400;
+    color: #6c78b5;
+    font-family: 'Maven Pro', sans-serif;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.btn--col--two {
+    position: fixed;
+    top: 520px;
+    right: 50px;
+    z-index: 1;
+
 }
 
 .product__content {
@@ -412,6 +467,7 @@ ul li {
     height: 8px;
     border-radius: 50px;
 }
+
 .dev__dot2 {
     background-color: #525252;
     width: 8px;
@@ -427,10 +483,12 @@ ul li {
     justify-content: center;
     background-color: #F4F6F3;
 }
+
 .elementor__box {
     margin: 0 4rem;
     display: flex;
 }
+
 .elementor__icon {
     margin-top: 1rem;
     width: 40px;
@@ -444,15 +502,18 @@ ul li {
     font-size: 20px;
     font-weight: 700;
 }
+
 .elementor__text {
     padding: 1rem;
 }
+
 .elementor__head {
     font-size: 17px;
     font-weight: 500;
     color: #363636;
     font-family: 'Rubik', sans-serif;
 }
+
 .elementor__title2 {
     margin-top: 10px;
     font-size: 14px;
@@ -470,11 +531,13 @@ ul li {
     justify-content: center;
     background-color: #F1F2F0;
 }
+
 .elementor2__icon {
     font-size: 80px;
     font-weight: 900;
     color: #4966FD;
 }
+
 .elementor2__text {
     margin: 1rem 0;
     font-size: 17px;
@@ -482,16 +545,91 @@ ul li {
     color: #020101;
     font-family: 'Maven Pro', sans-serif;
 }
+
 .elementor2__form {
     font-size: 17px;
     font-weight: 400;
     color: #020101;
     font-family: 'Maven Pro', sans-serif;
 }
-.elementor2__form a{
+
+.elementor2__form a {
     margin: 0 5px;
- text-decoration: underline;
- font-size: 17px;
- font-weight: 400;
- font-family: 'Maven Pro', sans-serif;
+    text-decoration: underline;
+    font-size: 17px;
+    font-weight: 400;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+/* SECTION  HOME FOOTER  */
+.home--footer--container {
+    background-color: #26222F;
+    position: relative;
+}
+
+.home--footer--content {
+    padding-top: 5rem;
+    padding-bottom: 8rem;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+}
+
+.col__one {
+    padding: 0 5rem;
+}
+
+.col--one--head {
+    margin: 2rem 0;
+    font-size: 24px;
+    font-weight: 400;
+    font-family: 'Maven Pro', sans-serif;
+    color: #FFF;
+}
+
+.col--one--text {
+    margin: 10px 0;
+    font-size: 17px;
+    font-weight: 400;
+    color: #FFF;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.col__two {
+    margin-top: 1.1rem;
+}
+
+.col--two--text {
+    margin: 10px 0;
+    font-size: 16px;
+    font-weight: 400;
+    color: #FFF;
+    font-family: 'Maven Pro', sans-serif;
+    cursor: pointer;
+}
+
+.content--text {
+    margin-bottom: 10px;
+}
+
+.content--text a {
+    font-size: 16px;
+    font-weight: 400;
+    color: #4966fd;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.social__icons {
+    display: flex;
+    position: absolute;
+    bottom: 50px;
+    right: 100px;
+}
+
+.footer__icon i {
+    margin: 0 10px;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Maven Pro', sans-serif;
+    color: #B1AFB4;
 }
