--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ ul li {
 
 /* SECTION  HEADER  */
 
-.header__container {
+/* .header__container {
     padding: 1.8rem 0;
     display: flex;
     align-items: center;
@@ -45,13 +45,15 @@ ul li {
 
 .header__btn:hover a {
     box-shadow: 1px 2px 2px 0 grey;
-}
+} */
 
 .hero--nav--logo {
+    width: 100%;
     padding: 0 5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #fff;
 }
 
 .hero__logo {
@@ -88,7 +90,6 @@ ul li {
 
 .sub__menu {
     display: none;
-    background-color: #FFF;
 }
 
 .menu__bar ul li:hover .sub__menu {
@@ -98,11 +99,12 @@ ul li {
     display: block;
     position: absolute;
     text-align: start;
-    z-index: 1;
+    background-color: #fff;
+    z-index: 111;
 }
 
 .menu__bar ul li:hover .sub__menu ul {
-    display: block;
+    display: inline-block;
 }
 
 .sub__menu ul li {
@@ -145,7 +147,6 @@ ul li {
     height: 100%;
     top: 0;
     left: 0;
-    /* background-color: #000; */
     background: rgba(0, 0, 0, 0.9) url(./image/code-gif-homepage.gif);
     background-position: center;
     background-size: cover;
@@ -995,7 +996,8 @@ ul li {
     line-height: 27px;
     font-family: 'Maven Pro', sans-serif;
 }
-.details__btn a{
+
+.details__btn a {
     margin-top: 1rem;
     margin-bottom: 4rem;
     width: 120px;
@@ -1011,8 +1013,9 @@ ul li {
     color: #f9f9f9;
     transition: 0.3s;
 }
-.details__btn a:hover{
-background-color: #4459C1
+
+.details__btn a:hover {
+    background-color: #4459C1
 }
 
 /* SECTION CONTACT  */
@@ -1023,6 +1026,7 @@ background-color: #4459C1
     align-items: center;
     background-color: #EDEDED;
 }
+
 .get--in--touch--header {
     margin: 1rem 0;
     font-size: 48px;
@@ -1031,8 +1035,9 @@ background-color: #4459C1
     font-family: 'Rubik', sans-serif;
 
 }
+
 .get--in--touch--title {
-    margin:3px 0;
+    margin: 3px 0;
     font-size: 17px;
     font-weight: 400;
     color: #525252;
@@ -1047,15 +1052,18 @@ background-color: #4459C1
     flex-direction: column;
     align-items: center;
 }
+
 .about__box {
     margin: 2rem 0;
     text-align: center;
 }
+
 .about__icon {
     font-size: 50px;
     font-weight: 900;
     color: #818a91;
 }
+
 .about__title {
     margin: 10px 0;
     font-size: 17px;
@@ -1063,12 +1071,14 @@ background-color: #4459C1
     color: #3e4154;
     font-family: 'Rubik', sans-serif;
 }
+
 .about__text {
     font-size: 17px;
     font-weight: 600;
     color: #6f7fd5;
     font-family: 'Maven Pro', sans-serif;
 }
+
 .about__dash {
     margin-bottom: 2rem;
     width: 90%;
@@ -1083,18 +1093,21 @@ background-color: #4459C1
     background-color: #EDEDED;
     text-align: center;
 }
+
 .follow__title {
     font-size: 17px;
     font-weight: 500;
     color: #3e4154;
     font-family: 'Rubik', sans-serif;
 }
+
 .follow__icon {
     padding: 1rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .follow__icon i {
     margin: 0 3px;
     font-size: 24px;
@@ -1102,6 +1115,128 @@ background-color: #4459C1
     color: #6F7FD5;
     transition: 0.3s;
 }
-.follow__icon i:hover{
+
+.follow__icon i:hover {
     color: #3A3742;
+}
+
+/* SECTION LOGIN  */
+.login__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #EDEDED;
+}
+
+.login__head {
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    font-size: 30px;
+    font-weight: 500;
+    color: #7a7a7a;
+    font-family: 'Rubik', sans-serif;
+}
+
+.input__hea {
+    margin: 10px 0;
+    font-size: 15px;
+    font-weight: 600;
+    color: #555555;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.login__input {
+    width: 449px;
+    height: 39px;
+    border: 1px solid silver;
+    background-color: #fff;
+}
+
+.radio--btn--text {
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+}
+
+.checkbox {
+    width: 20px;
+    height: 20px;
+}
+
+.radio__text {
+    margin-left: 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.radio__text {
+    font-size: 15px;
+    font-weight: 400;
+    color: #888888;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.login__btn {
+    margin: 1rem 0;
+    display: flex;
+}
+
+.login {
+    width: 215px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: #3BA1DA;
+    transition: 0.3s;
+    border-radius: 5px;
+}
+.login__input {
+    outline: none;
+}
+.login:hover {
+    background-color: #44B0EC;
+}
+.login a {
+    font-size: 15px;
+    font-weight: 400;
+    color: #FFF;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.register {
+    margin-left: 15px;
+    width: 215px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* box-shadow: 1px 1px 1px 1px #fff; */
+    box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.register:hover {
+    background-color: #E5E5E5;
+}
+
+.register a {
+    font-size: 15px;
+    font-weight: 400;
+    font-family: 'Maven Pro', sans-serif;
+    color: #666666;
+}
+.forgot {
+    margin-top: 1.5rem;
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: center;
+}
+
+.forgot a {
+    font-size: 15px;
+    font-weight: 400;
+    color: #888888;
 }
