--- a/style.css
+++ b/style.css
@@ -284,17 +284,22 @@ ul li {
 }
 
 .view__btn {
-    margin: 1rem 0;
+    margin-top: 2rem;
 }
 
 .view__btn a {
-    padding: 1rem 6.2rem;
+    padding: 10px 6rem;
     background-color: #4966FD;
     color: #FFF;
     font-size: 17px;
     font-weight: 700;
     font-family: 'Maven Pro', sans-serif;
-    border-radius: 5px;
+    border-radius: 3px;
+    transition: 0.3s;
+}
+
+.view__btn a:hover {
+    background-color: #26222F;
 }
 
 .sale__btn {
@@ -312,7 +317,8 @@ ul li {
 }
 
 .product__name {
-    padding: 10px 0;
+    margin-top: 1.5rem;
+    margin-bottom: 5px;
     font-size: 17px;
     font-weight: 500;
     color: #363636;
@@ -320,6 +326,7 @@ ul li {
 }
 
 .product__price {
+    margin-top: 10px;
     font-size: 15px;
     font-weight: 700;
     color: #525252;
@@ -404,6 +411,7 @@ ul li {
 }
 
 .facebook--box--footer {
+    margin-top: 10px;
     margin-bottom: 6rem;
     font-size: 17px;
     font-weight: 400;
@@ -655,15 +663,18 @@ ul li {
 .shop__content {
     display: flex;
 }
+.shop--col--one {
 
+} 
 .shop--input--btn {
     display: flex;
-    align-items: center;
 }
 
 .shop__input {
     width: 85px;
     height: 45px;
+    outline: none;
+    border: 1px solid silver;
 }
 
 .shop--search--btn {
@@ -761,7 +772,7 @@ ul li {
 }
 
 .item__list {
-    padding: 4rem 0;
+    padding: 3rem 0;
 }
 
 .item {
@@ -784,8 +795,60 @@ ul li {
     margin-left: 5px;
 }
 
+.recent--product--title {
+    margin-bottom: 2rem;
+    font-size: 20px;
+    font-weight: 500;
+    color: #585b53;
+    font-family: 'Rubik', sans-serif;
+}
+
+.recent__box {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.recent__img {
+    width: 100px;
+    height: 100px;
+}
+
+.recent__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.recent--text--box {
+    margin-left: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.recent__title {
+    margin: 5px 0;
+    font-size: 17px;
+    font-weight: 500;
+    color: #26222f;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.recent__price {
+    font-size: 17px;
+    font-weight: 400;
+    color: #525252;
+    font-family: 'Maven Pro', sans-serif;
+}
+.recent__dash {
+    margin: 10px 0;
+    width: 200px;
+    height: 1px;
+    background-color:silver;
+
+}
 .vertical__dash {
-    margin: 0 4em;
+    margin: 0 3em;
     width: 1px;
     height: auto;
     background-color: silver;
@@ -829,6 +892,8 @@ ul li {
     color: #666666;
     border: none;
     background: none;
+    border: none;
+    outline: none;
 }
 
 .shop--product--content {
@@ -842,7 +907,35 @@ ul li {
     display: flex;
     align-items: center;
 }
-
+.shop__contact {
+    display: inline-flex;
+    align-items: center;
+    position: fixed;
+    top: 550px;
+    left: 10px;
+}
+.shop__btn {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4966FD;
+    color: #FFF;
+    border-radius: 50px;
+    font-size: 40px;
+}
+.btn__contact {
+    margin-left: 5px;
+    padding: 5px 1rem;
+    background-color: #FFF;
+    font-size: 17px;
+    font-weight: 400;
+    color: #6c78b5;
+    font-family: 'Maven Pro', sans-serif;
+    border-radius: 10px;
+    cursor: pointer;
+}
 .next__btn {
     width: 45px;
     height: 45px;
@@ -939,7 +1032,8 @@ ul li {
 }
 
 .custom__faq {
-    margin-top: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
     font-size: 21px;
     font-weight: 500;
     color: #363636;
@@ -955,14 +1049,16 @@ ul li {
 
 .quantity i {
     font-size: 10px;
+    margin-right: 10px;
 }
 
 .quantity {
     margin: 3px 0;
+    margin-right: 10px;
     font-size: 17px;
     font-weight: 700;
     color: #525252;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Maven Pro', sans-serif;
     display: flex;
     align-items: center;
 }
@@ -1192,12 +1288,15 @@ ul li {
     transition: 0.3s;
     border-radius: 5px;
 }
+
 .login__input {
     outline: none;
 }
+
 .login:hover {
     background-color: #44B0EC;
 }
+
 .login a {
     font-size: 15px;
     font-weight: 400;
@@ -1228,6 +1327,7 @@ ul li {
     font-family: 'Maven Pro', sans-serif;
     color: #666666;
 }
+
 .forgot {
     margin-top: 1.5rem;
     margin-bottom: 3rem;
@@ -1239,4 +1339,41 @@ ul li {
     font-size: 15px;
     font-weight: 400;
     color: #888888;
+}
+
+/* SECTION REGISTER  */
+.register--input--container {
+    padding: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #E5E5E5;
+}
+
+.username {
+    margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.username label {
+    margin: 10px 0;
+    font-size: 17px;
+    font-weight: 600;
+    color: #525252;
+    font-family: 'Maven Pro', sans-serif;
+}
+
+.username input {
+    width: 445px;
+    height: 40px;
+    border: 1px solid silver;
+    outline: none;
+}
+
+.confirmpass input {
+    padding: 10px;
+    font-size: 15px;
+    font-weight: 400;
+    font-family: 'Maven Pro', sans-serif;
 }
